Tru to fix nav issues on safari

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -14,6 +14,10 @@ a {
   color: #8411DA;
 }
 
+nav {
+ -webkit-appearance: none;
+}
+
 .package-style {
   font-family: 'Courier New', monospace;
   background-color: #F5F5F5;
